--- a/views/index.html
+++ b/views/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <title>My Portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="views/index.html">Home</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <h2>About Me</h2>
+            <p>This is a sample paragraph.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 by <a href="https://github.com/olivsiarchiv">olivsiarchiv</a></p>
+    </footer>
 </body>
 </html>
