--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,9 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
 }
 
 header {
@@ -11,6 +14,7 @@ header {
     padding: 1rem 0;
     text-align: center;
     font-weight: bolder;
+    font-size: 40px;
 }
 
 main {
