--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+html {
+    height: 100%;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     line-height: 1.6;
@@ -14,7 +18,6 @@ header {
     padding: 1rem 0;
     text-align: center;
     font-weight: bolder;
-    font-size: 40px;
 }
 
 main {
