--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .header, .footer {
