--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,38 @@
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
-.header, .footer {
+.header, .footer, .navbar {
     background: #90596d;
-    color: white;
+}
+
+.navbar-toggler-icon {
+    filter: invert(1);
+}
+
+.navbar .nav-link.active {
+    color: #c78ca0;
+    font-weight: bold;
+}
+
+.text-align-justify {
+    text-align: justify;
+    background: #beacac;
+    color: #A94A4A;
+    font-size: large;
+    font-weight: bold;
+    word-spacing: 0.1px;
+    padding: 20px;
+    border: 10px solid;
+    line-height: 1.1;
 }
 
 .about-me {
     background: rgba(199, 140, 160, 0.7);
     border-radius: 15px;
-    border: 5px solid #90596d;
+    border: 5px solid;
     color: #90596d;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
 }
